# weirui_std_rs

./: Cargo.toml  HOST_FUNCTIONS_API.md  IMPLEMENTATION.md  README.md  a.wat  protoc.sh
.cargo/: config.toml
docs/: host_func.md  unified_result_system.md
examples/: robot_control.rs
src/: error.rs  host_functions.rs  lib.rs  main.rs  utils.rs
src/host/: host_func.rs  mod.rs
src/host/pb/: host_pb.proto  host_pb.rs  mod.rs
src/protobuf/: mod.rs  wasm_host.proto  wasm_host.rs
