[package]
name = "weirui_std_rs"
version = "0.1.0"
edition = "2021"
description = "A Rust standard library for robot control using WebAssembly host functions"
license = "MIT"
repository = "https://github.com/your-org/weirui_std_rs"
keywords = ["robotics", "webassembly", "servo", "control", "mcp"]
categories = ["robotics", "wasm", "api-bindings"]

# [lib]
# name = "weirui_std_rs"
# path = "src/lib.rs"
# crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { version = "1.0.99"}
protobuf = "3.7.2"
quick-protobuf = {version = "0.8.1"}

[[example]]
name = "robot_control"
path = "examples/robot_control.rs"
